                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 30-04-2006 fixed: MakeShortenPath() truncates the last folder if necessary.
 - 30-04-2006 fixed: [ 1479081 ] filemanager bug when copying into a folder ending with spaces.
 - 30-04-2006 fixed: search button was available in my music files, but requires a library.
 - 30-04-2006 fixed: If paplayer reached end of playback before a track was queued (eg in the case of a very short track being played) then the playlist was cleared when there were still items left to play.
 - 30-04-2006 fixed: Remove, Edit and Add Sources wouldn't be applied if the user ran as dash via the <home> tag (not recommended)
 - 29-04-2006 fixed: [ 1478872 ] slide show smb lookup uses shortened path then fails
 - 29-04-2006 fixed: 'movie information' was enabled in context menu for inappropriate entries in video database views.
 - 29-04-2006 fixed: visualisation transition on activate.
 - 29-04-2006 fixed: ButtonScroller - focus wasn't set to defaultbutton.
 - 29-04-2006 fixed: visualisation preset and lockstate were not reset when switching between visualisations.
 - 29-04-2006 fixed: Possible crashes when accessing nonexistent seekbar.
 - 29-04-2006 fixed: [ 1478357 ] Umlaute in movie/music info and scripts
 - 29-04-2006 fixed: [ 1478354 ] Python "overlapping of lines"
 - 29-04-2006 fixed: shoutcast urls now work with http api.
 - 29-04-2006 fixed: (hopefully) [ 1476918 ] Thumbnail/Icon for all homebrew games uses Super Mario War
 - 29-04-2006 changed: visualisation preset and lockstate are now remembered between windows and sessions.
 - 29-04-2006 fixed: Deletion of stacked files didn't work.