@@ -152,20 +152,35 @@
         <onleft>50</onleft>
         <onright>50</onright>
         <onup>5</onup>
+        <ondown>17</ondown>
+        <include>buttonpanelslide</include>
+      </control>
+
+      <control>
+        <description>Allmusic</description>
+        <type>button</type>
+        <id>17</id>
+        <posx>50</posx>
+        <posy>268</posy>
+        <label>Allmusic</label>
+        <onleft>50</onleft>
+        <onright>50</onright>
+        <onup>8</onup>
         <ondown>16</ondown>
         <include>buttonpanelslide</include>
       </control>
+
 
       <control>
         <description>Party Mode button</description>
         <type>radiobutton</type>
         <id>16</id>
         <posx>50</posx>
-        <posy>268</posy>
+        <posy>305</posy>
         <label>589</label>
         <onleft>50</onleft>
         <onright>50</onright>
-        <onup>8</onup>
+        <onup>17</onup>
         <ondown>2</ondown>
         <include>buttonpanelslide</include>
       </control>
